# swarm-net

./: .gitignore  README.md  pyproject.toml
src/swarmnet/: cli.py  config.py
src/swarmnet/extractors/: __init__.py  _base.py  bls_qcew.py  census.py  ffiec_cdr.py  fred.py  sec_edgar.py
src/swarmnet/review/: __init__.py  ui.py
src/swarmnet/schema/: __init__.py  comp.py  market.py  tenant.py
src/swarmnet/storage/: __init__.py  filesystem.py  ledger.py
