[project]
name = "swarmnet"
version = "0.1.0"
description = "SwarmNet · the CRE data moat · provenance-anchored ETL with HITL discipline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Swarm and Bee LLC"},
]
license = {text = "Proprietary"}
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "requests>=2.31",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pandas>=2.2",
    "kuzu>=0.10",
    "gradio>=6.0",
    "click>=8.1",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
swarmnet = "swarmnet.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
